--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 /* open-sans-300 - latin */
 @font-face {
   font-family: 'Open Sans';
@@ -169,4 +170,40 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+textarea::-webkit-scrollbar {
+  width: 0.2rem;
+}
+
+textarea::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  border-radius: 5px;
+}
+
+@media (prefers-color-scheme: light) {
+  textarea::-webkit-scrollbar-thumb {
+    background-color: rgb(30 41 59);
+  }
+}
+
+#scanContainer {
+  position: relative;
+  overflow: hidden;
+}
+#scanContainer .scan-region-highlight {
+  border-radius: 30px;
+  outline: rgba(0, 0, 0, 0.25) solid 50vmax;
+}
+#scanContainer .scan-region-highlight-svg {
+  display: none;
+}
+#scanContainer .code-outline-highlight {
+  stroke: #0ea5e9 !important;
+  stroke-width: 5 !important;
+  stroke-dasharray: none !important;
 }
